--- a/PiStack.desktop
+++ b/PiStack.desktop
@@ -1,8 +1,9 @@
 [Desktop Entry]
 Encoding=UTF-8
-Version=1.0
+Version=1.0.1
 Type=Application
 Categories=Game;Simulation
+StartupNotify=false
 Terminal=false
 Exec=python3 /home/pi/PiStack/pistack.py
 Name=PiStack
